<resources>
    <string name="app_name">TV program</string>

    <!-- NavigationDrawer -->
    <string name="categories">Categories</string>
    <string name="channels">Channels</string>
    <string name="preferred_channels">Preferred channels</string>
    <string name="tv_program">TV program</string>
    <string name="tv_program_manual">Manual synchronization </string>
    <string name="your_tv_program">Your TV channels show programs</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- MainActivity -->
    <string name="question_manual">Manual database synchronization with server takes some time. Start synchronization?</string>
    <string name="question_today_updating">Do you want to get automatically synchronize data four times a day? </string>
    <string name="question_today_updating_is_on">Data are automatically synchronize four times a day. Do you want to cancel it? </string>
    <string name="answer_no">No</string>
    <string name="answer_yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet">Please, turn on the Internet and restart the application</string>
    <string name="tv_day_updating">Day updating</string>
    <string name="data_update_not_four_times">Data for today will not be updated four times a day</string>
    <string name="data_update_four_times">Data for today will be updated four times a day</string>
    <string name="data_syns">Please, wait.\nData will be loaded from server soon</string>
    <string name="delete_data_db">Data are deleted from database</string>

    <!-- LoadingDataActivity -->
    <string name="loading_data">Loading data…</string>
    <string name="data_are_loaded">Data are loaded.\nThank you for waiting</string>
    <string name="categories_are_loaded">Categories are loaded</string>
    <string name="channels_are_loaded">Channels are loaded</string>
    <string name="programs_are_loaded">Programs are loaded</string>
    <string name="please">Please, wait for loading data</string>


    <!-- ListOfCategoriesFragment -->
    <string name="turn_on_Internet_for_categoryImage">Please, turn on Internet for loading category\'s image</string>

    <!-- ListOfPreferredChannelsFragment -->
    <!-- ListOfChannelsFragment -->
    <string name="question_add_preferred">Would you like to add channel %1$s in list of preferred channels?</string>
    <string name="channel_is_preferred">The channel %1$s was already added into list of preferred channels</string>
    <string name="channel_will_be_preferred">The channel %1$s is added into list of preferred channels</string>
    <string name="turn_on_Internet_for_channelImage">Please, turn on Internet for loading channel\'s image</string>
    <string name="show_preferred">Show TV Program for preferred channels</string>
    <string name="show_nothing">No selected channels\n Select?</string>
    <string name="question_delete_preferred">Would you like to delete channel %1$s from list of preferred channels?</string>
    <string name="delete_channel_is_preferred">The channel %1$s is deleted from list of preferred channels</string>
    <string name="selecting_title">Selecting preferred channels</string>

    <!-- ItemCategoryLayout -->
    <string name="category_name">Category name</string>

    <!-- ItemChannelLayout -->
    <string name="channel_logo" />
    <string name="channel_name">Channel name</string>
    <string name="channel_category">Channel category</string>

    <!-- ItemProgramLayout -->
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="title">Title</string>

    <!-- DatePickerFragment -->
    <string name="select_date">Select date for showing TV program</string>

    <!-- Notification -->
    <string name="data_are_loaded_for_period">Data are loaded for %1$s days</string>
    <string name="data_updated">Today\'s TV Program has been updated</string>


</resources>
