<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_tv_program"
            android:checkable="true"
            android:icon="@drawable/ic_all_channels"
            android:title="@string/tv_program" />
        <item
            android:id="@+id/item_list_categories"
            android:checkable="true"
            android:icon="@drawable/ic_category"
            android:title="@string/categories" />
        <item
            android:id="@+id/item_list_channels"
            android:checkable="true"
            android:icon="@drawable/ic_list_channels"
            android:title="@string/channels" />
        <item
            android:id="@+id/item_list_preferred_channels"
            android:checkable="true"
            android:icon="@drawable/ic_prefered"
            android:title="@string/preferred_channels" />
    </group>
    <group>
        <item
            android:id="@+id/item_manual_sync"
            android:checkable="true"
            android:icon="@drawable/ic_action_sync"
            android:title="@string/tv_program_manual" />
        <item
            android:id="@+id/item_setup_update"
            android:checkable="true"
            android:icon="@drawable/ic_updating"
            android:title="@string/tv_day_updating" />
    </group>

</menu>