<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp"
    android:background="@color/cardview_dark_background">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/channel_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/channel_logo"
            android:contentDescription="@string/channel_logo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/channel_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/channel_name" />

            <TextView
                android:id="@+id/channel_category"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/channel_category" />

        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>