<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_margin="5dp"
                                    android:background="@color/cardview_dark_background"
                                    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/channel_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="2dp"
            android:contentDescription="@string/channel_logo"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/channel_name"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="fill_vertical"
                    android:padding="10dp"
                    android:text="@string/channel_name"/>

                <com.shtainyky.tvprogram.widgets.CustomImageView
                    android:id="@+id/channel_preferred"
                    android:src="@drawable/imageview_selector"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="right"
                    android:contentDescription="@string/app_name"/>
            </LinearLayout>

            <TextView
                android:id="@+id/channel_category"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:gravity="fill_vertical"
                android:padding="10dp"
                android:text="@string/channel_category"/>

        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>